--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cn": "^0.1.1",
+    "date-fns": "^4.1.0",
     "input": "^1.0.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "shadcn": "^3.2.1",
     "tailwind-merge": "^3.3.1",
