--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.5",
     "button": "^1.1.1",
     "class-variance-authority": "^0.7.1",
@@ -22,7 +24,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input": "^1.0.1",
-    "lucide-react": "^0.544.0",
+    "lucide-react": "^0.553.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
