--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-image-gallery": "^1.4.0",
     "shadcn": "^3.2.1",
     "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.8"
+    "tw-animate-css": "^1.3.8",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
